// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Literals Arithmetic binary Adding floats 1`] = `
Object {
  "kind": "typeof",
  "target": Object {
    "kind": "literal",
    "type": "obj",
    "value": Object {
      "a": Object {
        "kind": "new",
        "target": Object {
          "kind": "type",
          "origin": "builtin",
          "type": "int",
        },
      },
      "b": Object {
        "kind": "literal",
        "type": "int",
        "value": 10,
      },
    },
  },
}
`;

exports[`Literals Arithmetic binary Adding ints 1`] = `
Object {
  "kind": "literal",
  "type": "obj",
  "value": Object {
    "a": Object {
      "kind": "new",
      "target": Object {
        "kind": "type",
        "origin": "builtin",
        "type": "int",
      },
    },
    "b": Object {
      "kind": "literal",
      "type": "int",
      "value": 10,
    },
  },
}
`;

exports[`Literals Arithmetic binary Divide 1`] = `
Object {
  "kind": "binary",
  "left": Object {
    "kind": "literal",
    "type": "float",
    "value": 3.14159,
  },
  "operator": "+",
  "right": Object {
    "kind": "literal",
    "type": "float",
    "value": 2.71828,
  },
}
`;

exports[`Literals Arithmetic binary Modulo 1`] = `
Object {
  "kind": "binary",
  "left": Object {
    "kind": "literal",
    "type": "int",
    "value": 9,
  },
  "operator": "-",
  "right": Object {
    "kind": "literal",
    "type": "int",
    "value": 5,
  },
}
`;

exports[`Literals Arithmetic binary Subtract 1`] = `
Object {
  "kind": "binary",
  "left": Object {
    "kind": "literal",
    "type": "int",
    "value": 2,
  },
  "operator": "+",
  "right": Object {
    "kind": "literal",
    "type": "int",
    "value": 2,
  },
}
`;

exports[`Literals Boolean binary And 1`] = `
Object {
  "kind": "binary",
  "left": Object {
    "kind": "literal",
    "type": "int",
    "value": 18,
  },
  "operator": "%",
  "right": Object {
    "kind": "literal",
    "type": "int",
    "value": 3,
  },
}
`;

exports[`Literals Boolean binary And 2`] = `
Object {
  "kind": "binary",
  "left": Object {
    "kind": "literal",
    "type": "int",
    "value": 2,
  },
  "operator": "+",
  "right": Object {
    "kind": "binary",
    "left": Object {
      "kind": "literal",
      "type": "int",
      "value": 3,
    },
    "operator": "*",
    "right": Object {
      "kind": "literal",
      "type": "int",
      "value": 4,
    },
  },
}
`;

exports[`Literals Boolean binary Or 1`] = `
Object {
  "kind": "binary",
  "left": Object {
    "kind": "binary",
    "left": Object {
      "kind": "literal",
      "type": "int",
      "value": 2,
    },
    "operator": "+",
    "right": Object {
      "kind": "literal",
      "type": "int",
      "value": 3,
    },
  },
  "operator": "*",
  "right": Object {
    "kind": "literal",
    "type": "int",
    "value": 4,
  },
}
`;

exports[`Literals Boolean binary Or 2`] = `
Object {
  "kind": "unary",
  "operator": "!",
  "target": Object {
    "kind": "literal",
    "type": "bool",
    "value": false,
  },
}
`;

exports[`Literals Boolean unary Negate false 1`] = `
Object {
  "kind": "binary",
  "left": Object {
    "kind": "literal",
    "type": "int",
    "value": 6,
  },
  "operator": "/",
  "right": Object {
    "kind": "literal",
    "type": "int",
    "value": 3,
  },
}
`;

exports[`Literals Boolean unary Negate true 1`] = `
Object {
  "kind": "binary",
  "left": Object {
    "kind": "literal",
    "type": "int",
    "value": 4,
  },
  "operator": "*",
  "right": Object {
    "kind": "literal",
    "type": "int",
    "value": 2,
  },
}
`;

exports[`Literals float literal 1`] = `
Object {
  "kind": "literal",
  "type": "float",
  "value": 3.14159,
}
`;

exports[`Literals float typeof 1`] = `
Object {
  "kind": "typeof",
  "target": Object {
    "kind": "literal",
    "type": "float",
    "value": 3.14159,
  },
}
`;

exports[`Literals int literal 1`] = `
Object {
  "kind": "literal",
  "type": "int",
  "value": 10,
}
`;

exports[`Literals int typeof 1`] = `
Object {
  "kind": "typeof",
  "target": Object {
    "kind": "literal",
    "type": "int",
    "value": 10,
  },
}
`;

exports[`Literals null literal 1`] = `
Object {
  "kind": "literal",
  "type": "null",
  "value": null,
}
`;

exports[`Literals null typeof 1`] = `
Object {
  "kind": "typeof",
  "target": Object {
    "kind": "literal",
    "type": "null",
    "value": null,
  },
}
`;

exports[`Literals obj literal 1`] = `
Object {
  "kind": "literal",
  "type": "str",
  "value": "hello",
}
`;

exports[`Literals obj typeof 1`] = `
Object {
  "kind": "typeof",
  "target": Object {
    "kind": "literal",
    "type": "str",
    "value": "hello",
  },
}
`;
